fixed scrollbar

--- a/test.css
+++ b/test.css
@@ -10,13 +10,20 @@
     border-radius: 10px;
 }
 /* Handle */
-::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb:horizontal {
     background: #83fe5b;
     border-radius: 20px;
 }
+::-webkit-scrollbar-thumb:vertical {
+    background: #d5d5d5;
+    border-radius: 20px;
+}
 /* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-    background: ##83fe5b;
+::-webkit-scrollbar-thumb:horizontal:hover {
+    background: #53e424;
+}
+::-webkit-scrollbar-thumb:vertical:hover {
+    background: gray;
 }
 /* Hide scrollbar for IE, Edge and Firefox */
 .scrollbar {
